# robotics

./: README.md
docs/: gazebo_project_one.md  go_chase_it.md
gazebo_project_one/: CMakeLists.txt
gazebo_project_one/model/my_house/: model.config  model.sdf
gazebo_project_one/model/robot_in_my_house/: model.config  model.sdf
gazebo_project_one/scripts/: hello_model.cpp
gazebo_project_one/world/: my_house_with_robots
go_chase_it_project_two/ball_chaser/: CMakeLists.txt
go_chase_it_project_two/ball_chaser/launch/: ball_chaser.launch
go_chase_it_project_two/ball_chaser/src/: drive_bot.cpp  process_image.cpp
go_chase_it_project_two/my_robot/: package.xml
go_chase_it_project_two/my_robot/launch/: robot_description.launch  world.launch
go_chase_it_project_two/my_robot/urdf/: my_robot.gazebo  my_robot.xacro
go_chase_it_project_two/my_robot/worlds/: anjan_roy.world
go_chase_it_project_two/src/ball_chaser/: package.xml
